# timetracker

./: .gitignore  LICENSE  README.md  config.json  config.json.example  config.py  menubar_tracker.py  pyproject.toml  rebar.config  requirements.txt  run.sh  stop.sh  time_tracker.py  timetracker
.github/workflows/: ci.yml
config/: sys.config
priv/: xinput.sh
src/: timetracker.app.src  timetracker.erl  timetracker_app.erl  timetracker_db.erl  timetracker_server.erl  timetracker_sup.erl  tt_format.erl  tt_notify.erl  tt_utils.erl  tt_video_source.erl  tt_xinput_source.erl
timetracker/: config.py  install.py  menubar.py  tracker.py
